# recipe-box

./: .gitignore  README.md  RecipeBox.sln  install.iss  install.ps1  publish.ps1  pyproject.toml
RecipeBox/: Browser.cs  Library.cs  Models.cs  Pages.cs  Parser.cs  Pdf.cs  Program.cs  RecipeBox.csproj  Renderer.cs  TextUtils.cs  Web.http  appsettings.json
RecipeBox.Console/: Program.cs  RecipeBox.Console.csproj
RecipeBox.Console/Commands/: DeleteCommand.cs  EditCommand.cs  ExportCommand.cs  ImportCommand.cs  ListCommand.cs  PdfCommand.cs  ShowCommand.cs  TransformCommand.cs
RecipeBox.Core/: Browser.cs  Library.cs  Models.cs  Parser.cs  Pdf.cs  RecipeBox.Core.csproj  Renderer.cs  TextUtils.cs
RecipeBox.Editor/: TextEditor.cs
RecipeBox.Scrapers/: Class1.cs  RecipeBox.Scrapers.csproj  RecipeScraper.cs
RecipeBox.Tests/: RecipeBox.Tests.csproj  RecipeParserTests.cs  TextUtilsTests.cs
RecipeBox.Web/: Pages.cs  Program.cs  RecipeBox.Web.csproj
RecipeBox.Web/Properties/: launchSettings.json
RecipeBox.Web/static/css/: app.css
RecipeBox.Web/static/js/: app.js
RecipeBox/Data/: Models.cs  Repository.cs
RecipeBox/Export/: JsonExporter.cs  MarkdownExporter.cs
RecipeBox/Import/: Importer.cs  LlmImporter.cs  UrlImporter.cs
RecipeBox/Render/: TypstRenderer.cs
RecipeBox/recipes/: banana-bread.rcp
src/recipe_box/: __init__.py  assistant.py  browser.py  diff.py  editor.py  jsonld.py  library.py  main.py  models.py  preferences.py  rendering.py  theme.py
static/css/: app.css.map
static/js/: recipe-mode.js
static/sass/: base.sass
test/: test_parsing.py
(+9 files in other folders)
