[project]
name = "recipe-box"
version = "0.1.0"
description = "A desktop recipe manager for organizing your collection using a simple markup language."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "instructor>=1.10.0",
    "pydantic>=2.11.7",
    "pyside6>=6.9.1",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.12",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]
